--- a/index.html
+++ b/index.html
@@ -418,13 +418,25 @@
                             <div class="faq-accordion">
                                 <div class="exp-box">
                                     <div class="title">
-                                        <span>Junior Web Developer</span>
+                                        <span>Freelance Web Designer</span>
+                                        <i class="fas fa-caret-down"></i>
+                                    </div>
+                                    <div class="slide-text">
+                                        <p class="intro">2021 – 2022</p>
+                                        <p class="info main-p">
+                                            I was a Freelance Web Developer in a start-up company when I was still sudying in college where I collaborated with our senior developers and design a web application using Figma. I have also experience building web pages using html and css.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="exp-box">
+                                    <div class="title">
+                                        <span>Web Application Developer</span>
                                         <i class="fas fa-caret-down"></i>
                                     </div>
                                     <div class="slide-text">
                                         <p class="intro">2022 – 2023</p>
                                         <p class="info main-p">
-                                            I was a Junior Web Developer in a start-up company where I debugs codes and collaborate with my teams when working in a project to design, develop, and test.
+                                            I was a Web Application Developer in a start-up company where I debugs codes and collaborate with my teams when working in a project to design, develop, and test.
                                         </p>
                                     </div>
                                 </div>
@@ -437,6 +449,18 @@
                                         <p class="intro">2022 - 2023</p>
                                         <p class="info main-p">
                                             I have been in Quality Assurance making sure that we deliver the best product to out clients with no mistakes since we were handling personal data of our clients where we should ensure that everything is correct. I also do testing with our web applications making sure that everything is running smoothly.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="exp-box">
+                                    <div class="title">
+                                        <span>Virtual Assistant - IT Departmen</span>
+                                        <i class="fas fa-caret-down"></i>
+                                    </div>
+                                    <div class="slide-text">
+                                        <p class="intro">2023 - 2024</p>
+                                        <p class="info main-p">
+                                           I served as a Virtual Assistant for a Singapore-based Software Company, overseeing our scrum processes among developers while also managing quality assurance, crafting social media content, editing videos and images, generating AI images, and strategically posting multimedia across all six of our social media platforms.
                                         </p>
                                     </div>
                                 </div>
