--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
                         <div class="experience-content comman-padding">
                             <div class="text">
                                 <p class="main-p">
-                                    I have 1 year work experience as a Junior Web Developer in a start-up company. My role is not only focused as being a developer but my roles also includes being a tech support, editing photos, conducts trainings, creating manual, and quality assurance. I have 5 years of experience in photo editing since I was doing it since I was in college as an IT student and as a hobby of mine. 
+                                    During my undergraduate studies, I gained one year of valuable work experience as a Freelance Web Designer in a startup. Beyond design responsibilities, I actively contributed to website development. Transitioning to the role of a Junior Application Developer within the same company, my duties expanded to encompass diverse tasks such as providing technical support, photo editing, conducting training sessions, creating manuals, and ensuring quality assurance. <br>
+
+Drawing on a solid foundation built during my college years, where I engaged in photo editing as both an IT student and a personal hobby for five years, I honed my skills. Following my role as a Junior Application Developer, I secured a position as a Virtual Assistant at a software company, focusing on the IT department. In this role, I undertook responsibilities such as quality assurance for websites and marketing content, crafting social media content, overseeing social media management, editing videos and images, and more.
                                 </p>
                             </div>
                             <div class="faq-accordion">
