--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                 </div>
                                 <div class="exp-box">
                                     <div class="title">
-                                        <span>Virtual Assistant - IT Departmen</span>
+                                        <span>Virtual Assistant - IT Department</span>
                                         <i class="fas fa-caret-down"></i>
                                     </div>
                                     <div class="slide-text">
