update for Flyer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <img src="images/chryzcafe.png" alt="Portfolio 2">
                                         <div class="portfolio-text-holder">
                                             <div class="portfolio-text-wrapper">
-                                                <p class="portfolio-text">Coffee Shop FLyer</p>
+                                                <p class="portfolio-text">Coffee Shop Flyer</p>
                                                 <p class="portfolio-cat">Image</p>
                                             </div>
                                         </div>
